Refactor testerina integration tests